--- a/index.html
+++ b/index.html
@@ -1,60 +1,50 @@
 <!doctype html>
 <html lang="id">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VR PC Assembly - Computer Lab</title>
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>VR PC Assembly Demo</title>
 
-    <!-- A-Frame dan plugin -->
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-super-hands/dist/aframe-super-hands.min.js"></script>
+  <!-- A-Frame core -->
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 
-    <!-- Script modular -->
-    <script src="./js/snap-system.js"></script>
-    <script src="./js/setup-controllers.js"></script>
-    <script src="./js/main.js" defer></script>
-  </head>
+  <!-- Super-hands (grab & interaction) -->
+  <script src="https://unpkg.com/aframe-super-hands/dist/aframe-super-hands.min.js"></script>
 
-  <body>
-    <a-scene background="color: #ECECEC">
-      <!-- === ASET === -->
-      <a-assets>
-        <a-asset-item id="roomModel" src="assets/computer_lab.glb"></a-asset-item>
-        <a-asset-item id="screwdriver" src="assets/screwdriver.glb"></a-asset-item>
-        <a-asset-item id="wooden_box" src="assets/wooden_box.glb"></a-asset-item>
-        <a-asset-item id="toolbox" src="assets/toolbox_lowpoly.glb"></a-asset-item>
-        <a-asset-item id="screw" src="assets/simple_screw.glb"></a-asset-item>
-      </a-assets>
+  <!-- A-Frame extras (teleport, physics, dll opsional) -->
+  <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
 
-      <!-- === BACKGROUND (RUANGAN) === -->
-      <a-entity 
-        id="background-room" 
-        gltf-model="#roomModel" 
-        position="0 0 0" 
-        scale="1 1 1" 
-        rotation="0 0 0"
-        shadow="receive: true"
-        class="environment"
-        visible="true">
-      </a-entity>
+  <!-- Custom scripts -->
+  <script src="js/snap-system.js"></script>
+  <script src="js/main.js"></script>
 
-      <!-- === PENCAYAHAN === -->
-      <a-entity light="type: ambient; intensity: 0.8; color: #fff"></a-entity>
-      <a-entity light="type: directional; intensity: 1; castShadow: true" position="3 5 2"></a-entity>
+  <style>body { margin: 0; }</style>
+</head>
 
-      <!-- === LANTAI TAMBAHAN (optional untuk bayangan) === -->
-      <a-plane rotation="-90 0 0" width="20" height="20" color="#666" shadow="receive: true"></a-plane>
+<body>
+  <a-scene background="color: #ECECEC" renderer="antialias: true">
+    <!-- ========== ASET ========== -->
+    <a-assets>
+      <a-asset-item id="roomModel" src="assets/computer_lab.glb"></a-asset-item>
+      <a-asset-item id="screwdriver" src="assets/screwdriver.glb"></a-asset-item>
+      <a-asset-item id="wooden_box" src="assets/wooden_box.glb"></a-asset-item>
+      <a-asset-item id="toolbox" src="assets/toolbox_lowpoly.glb"></a-asset-item>
+      <a-asset-item id="screw" src="assets/simple_screw.glb"></a-asset-item>
+    </a-assets>
 
-      <!-- === KAMERA & KONTROL === -->
-      <a-entity id="cameraRig" position="0 1.6 3">
-        <a-entity camera look-controls wasd-controls></a-entity>
-      </a-entity>
+    <!-- ========== RUANGAN (background) ========== -->
+    <a-entity gltf-model="#roomModel" scale="0.2 0.2 0.2" position="0 0 0" rotation="0 90 0"></a-entity>
 
-      <!-- Controller VR & desktop akan dibuat oleh setup-controllers.js -->
-      
-      <!-- === OBJEK INTERAKTIF === -->
-      <a-entity id="scene-objects"></a-entity>
-    </a-scene>
-  </body>
+    <!-- ========== PENCAHAYAAN ========== -->
+    <a-entity light="type: ambient; color: #BBB"></a-entity>
+    <a-entity light="type: directional; intensity: 0.8" position="2 4 1"></a-entity>
+
+    <!-- ========== TEMPAT SEMUA OBJEK ========== -->
+    <a-entity id="scene-objects"></a-entity>
+
+    <!-- ========== LANTAI (untuk teleport) ========== -->
+    <a-plane id="ground" rotation="-90 0 0" width="10" height="10" color="#777"></a-plane>
+
+  </a-scene>
+</body>
 </html>
