--- a/index.html
+++ b/index.html
@@ -1,50 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VR PC Assembly Demo</title>
-
-  <!-- A-Frame core -->
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-
-  <!-- Super-hands (grab & interaction) -->
-  <script src="https://unpkg.com/aframe-super-hands/dist/aframe-super-hands.min.js"></script>
-
-  <!-- A-Frame extras (teleport, physics, dll opsional) -->
-  <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-
-  <!-- Custom scripts -->
-  <script src="js/snap-system.js"></script>
-  <script src="js/main.js"></script>
-
-  <style>body { margin: 0; }</style>
+  <meta charset="UTF-8">
+  <title>Babylon VR Grab System Modular</title>
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+  <style>
+    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; background: #000; }
+    canvas { width: 100%; height: 100%; touch-action: none; }
+  </style>
 </head>
-
 <body>
-  <a-scene background="color: #ECECEC" renderer="antialias: true">
-    <!-- ========== ASET ========== -->
-    <a-assets>
-      <a-asset-item id="roomModel" src="assets/computer_lab.glb"></a-asset-item>
-      <a-asset-item id="screwdriver" src="assets/screwdriver.glb"></a-asset-item>
-      <a-asset-item id="wooden_box" src="assets/wooden_box.glb"></a-asset-item>
-      <a-asset-item id="toolbox" src="assets/toolbox_lowpoly.glb"></a-asset-item>
-      <a-asset-item id="screw" src="assets/simple_screw.glb"></a-asset-item>
-    </a-assets>
+  <canvas id="renderCanvas"></canvas>
 
-    <!-- ========== RUANGAN (background) ========== -->
-    <a-entity gltf-model="#roomModel" scale="0.2 0.2 0.2" position="0 0 0" rotation="0 90 0"></a-entity>
-
-    <!-- ========== PENCAHAYAAN ========== -->
-    <a-entity light="type: ambient; color: #BBB"></a-entity>
-    <a-entity light="type: directional; intensity: 0.8" position="2 4 1"></a-entity>
-
-    <!-- ========== TEMPAT SEMUA OBJEK ========== -->
-    <a-entity id="scene-objects"></a-entity>
-
-    <!-- ========== LANTAI (untuk teleport) ========== -->
-    <a-plane id="ground" rotation="-90 0 0" width="10" height="10" color="#777"></a-plane>
-
-  </a-scene>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
